--- a/LabelGenerator/views/layout.pug
+++ b/LabelGenerator/views/layout.pug
@@ -3,9 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    scrp(src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js")
     link(rel='stylesheet', href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css")
-
+    script(src="javascripts/CheckEnv.js")
+    script(src="javascripts/dymo.connect.framework.js")
   body
     block content
     div.card
@@ -14,3 +15,11 @@ html
         div.card-tools
           span.badge.badge-primary Label 
       div.card-body The body of the card
+    .header 
+      #sampleDescription 
+        span This sample shows how check that the browser is supported and Dymo Label Framework is installed.\
+    .content
+      button#checkButton Check
+      #output
+    
+    
