--- a/LabelGenerator/views/index.pug
+++ b/LabelGenerator/views/index.pug
@@ -3,4 +3,42 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  
+  h1 DYMO Label Framework JavaScript Library Samples: Preview and Print Label
+  .header
+    #sampleDesctiption
+      span This sample shows how new DYMO Label Connect JavaScript Library can be used to display a label preview as well as loading label from a local file and print it. This sample demonsrates:
+        ul
+          li Using dymo.label.framework.openLabelXml() and openLabelFile() to load label definition for further manipulation
+          li label.getAddressText() and setAddressText() to read and set address information on a Address object
+          li label.render() to generate label preview
+          li dymo.label.framework.getPrinters() to get information about installed DYMO printers
+          li label.print() to print the label
+        ul
+        p Note: the preview does not work in Internet Explorer 6 and Internet Explorer 7.   We encourage to use Google  Chrome.
+        p Some browsers are not able to return the full path to try to open file, in this case, label will be loaded from predetermined XML.
+
+  .top
+    .left
+      #labelFileSelection
+        label(for="labelFile") Select label file with address object: 
+        input#labelFile(type="file",name="labelFile")
+      #addressDiv
+        label(for="addressTextArea") Current address: 
+        br
+        textarea#addressTextArea(name="addressTextArea", rows='5', cols='40')
+
+    .content
+      #labelImageDiv
+        img#labelImage(src="", alt="label preview")
+    
+      .printControls
+        #printersDiv
+          label(for="printerSelect") Printer: 
+          select#printerSelect
+        #printDiv
+          button#printButton Print
+
+        div
+          label 
+            b Printer Details Information
+            #printerDetail
