--- a/LabelGenerator/views/index.pug
+++ b/LabelGenerator/views/index.pug
@@ -33,8 +33,8 @@ block content
     
       .printControls
         #printersDiv
-          label(for="printerSelect") Printer: 
-          select#printerSelect
+          label(for="printersSelect") Printer: 
+          select#printersSelect
         #printDiv
           button#printButton Print
 
