experiment with new label type

--- a/LabelGenerator/views/layout.pug
+++ b/LabelGenerator/views/layout.pug
@@ -6,8 +6,8 @@ html
     script(src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js")
     link(rel='stylesheet', href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css")
-    script(src="javascripts/CheckEnv.js")
     script(src="javascripts/dymo.connect.framework.js")
+    block chead
   body
     block content
     
