Rename to bumpdown and extract card mixin

--- a/LabelGenerator/views/bumpdown.pug
+++ b/LabelGenerator/views/bumpdown.pug
@@ -1,14 +1,5 @@
 extends layout 
-mixin card(title='', theme='primary')
-  .card(class=`card-${theme}`)
-    .card-header
-      h3.card-title= title
-    .card-body.w-100
-      if block
-        block
-    .card-footer(class=`bg-${theme}`)
-
-
+include mixins/card
 
 block content
   script(type="module" src="javascripts/2text.js")
