--- a/LabelGenerator/views/bumpdown.pug
+++ b/LabelGenerator/views/bumpdown.pug
@@ -2,7 +2,7 @@ extends layout
 include mixins/card
 
 block content
-  script(type="module" src="javascripts/2text.js")
+  script(type="module" src="javascripts/bumpdown.js")
   h1.text-center= title
   .row
     .col
