--- a/LabelGenerator/views/mixins/printingCard.pug
+++ b/LabelGenerator/views/mixins/printingCard.pug
@@ -1,4 +1,5 @@
 mixin printingCard
+  script(src="javascripts/printerControls.js",type="module")
   #printersDiv
     .form-group
       label(for="printersSelect") Printer: 
