--- a/LabelGenerator/views/bumpdown.pug
+++ b/LabelGenerator/views/bumpdown.pug
@@ -1,6 +1,6 @@
 extends layout 
 include mixins/card
-
+include mixins/printingCard
 block content
   script(type="module" src="javascripts/bumpdown.js")
   h1.text-center= title
@@ -52,9 +52,10 @@ block content
   .row
     .col
       +card('Print Controls', 'info')
-        #printersDiv
+        +printingCard
+        //- #printersDiv
           .form-group
             label(for="printersSelect") Printer: 
             select.form-control#printersSelect
-        #printDiv
+        //- #printDiv
           button.btn.btn-lg#printButton.bg-success.w-100 Print
