--- a/LabelGenerator/views/freetext.pug
+++ b/LabelGenerator/views/freetext.pug
@@ -3,11 +3,19 @@ include mixins/card
 include mixins/printingCard
 
 block content
-  //- sciprt(type="module", src="javascripts/freetext.js")
+  script(type="module", src="javascripts/freetext.js")
   h1.text-center= title
   .row
     .col
       +card('Freetext Label').w-100
+        .col
+          .row.d-flex.align-items-center.justify-content-center
+            .form-group#wrapper
+              label(for="freetext") Text Content
+              textarea.form-control#freetext(rows="4")
+          .row.d-flex.align-items-center.justify-content-center
+            //- .col.align-items-center.justify-content-center
+            img#labelImage(src="", alt="label preview").border
   .row
     .col
       +card('Print Controls', 'info')
