--- a/LabelGenerator/views/assignment.pug
+++ b/LabelGenerator/views/assignment.pug
@@ -1,1 +1,35 @@
-//- User,AssetTag,Department,TicketNumber
+extends layout
+include mixins/card
+include mixins/printingCard
+
+block content
+  script(type="module", src="javascripts/assignment.js")
+  h1.text-center= title
+  .row
+    .col 
+      +card('Staff/Faculty Assignment').w-100
+        .container-fluid
+          .values#labelFormWrapper
+            h4 Assignment Details
+            .row
+              .col
+                .form-group 
+                  label(for="asset") Asset Tag
+                  input#asset.form-control(type="text",name="asset")
+                .form-group
+                  label(for="user") Staff/Faculty Name
+                  input#user.form-control(type="text",name="user")
+                .form-group 
+                  label(for="department") Department
+                  input#department.form-control(type="text",name="department")
+                .form-group 
+                  label(for="ticketno") Deployment Ticket Number
+                  input#ticketno.form-control(type="text",name="ticketno")
+              .col.d-flex.align-items-center.justify-content-center
+                img#labelImage(src="", alt="label preivew").border
+
+  .row
+    .col
+      +card
+        +printingCard
+
