--- a/LabelGenerator/views/layout.pug
+++ b/LabelGenerator/views/layout.pug
@@ -12,6 +12,15 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     
   body
+    nav.main-header.navbar.navbar-expand.ml-0.navbar-white.navbar-light.navbar-toggler
+      ul.navbar-nav
+        li.nav-item
+          a.nav-link(href="voucher") Voucher Label
+        li.nav-item 
+          a.nav-link(href="bumpdown") Bumpdown Label
+        li.nav-item
+          a.nav-link(href="assignment") Device Assignment Label
+
     block content
     
     
